kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockdevops-app
  namespace: devops-prod
  labels:
    app: stockdevops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockdevops-app
  template:
    metadata:
      labels:
        app: stockdevops-app
    spec:
      containers:
      - name: stockdevops-app
        image: zishan001/stockdevops-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 20
