kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockdevops-app-service
  namespace: devops-prod
  labels:
    app: stockdevops-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30033
    protocol: TCP
  selector:
    app: stockdevops-app
